static/css/s2.css
/* ... */
.header .home {
  position: absolute;
  top: 0px;
  left: 50%;
  margin-left: -51px;
}
.header .home img {
  opacity: 0.8;
  vertical-align: middle;
  height: 22px;
}
.header .accountLinks {
  display: inline-block;
  font-size: 15px;
}
.header .account, .header .notifications {
  display: inline-block;
  vertical-align: middle;
}
.header .library, .header .account {
  margin: 0px 17px 0 0;
  font-size: 24px;
}
.header .notifications {
  display: inline-block;
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif;
  line-height: 24px;
  height: 24px;
  width: 24px;
  text-align: center;
  border-radius: 15px;
  background-color: #aaa;
  color: white;
  font-size: 16px;
}
.header .notifications.unread {
  background-color: #EFB4B6;
}
.header .login {
  color: #999;
  margin: 0 0 0 30px;
  display: inline-block;
  line-height: 1;
}
.header .login .en {
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif;
}
.header .login .he {
  font-family: "Open Sans Hebrew", sans-serif;
}
.header .testWarning {
  display: inline-block;
  color: white;
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif;
  background-color: #EFB4B6;
  border-radius: 12px;
  font-size: 14px;
  line-height: 1;
  padding: 6px 16px;
  vertical-align: middle;
  height: 14px;
  max-width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: pointer;
  margin-right: 15px;
}
.header .testWarning:hover {
  text-decoration: underline;
}
.header .he {
  /* temp, until we support hebrew header */
  display: none;
}
.testMessageBox {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 5000;
}
.overlay {
  width: 100%;
  height: 100%;
  background-color: black;
  opacity: 0.3;
  position: fixed;
  z-index: 1001;
}
#interruptingMessage {
  width: 600px;
  max-width: 94%;
  padding: 40px;
  box-sizing: border-box;
  position: fixed;
  top: 15%;
  left: 50%;
  margin-left: -300px;
  z-index: 1001;
  border: 1px solid #ccc;
  background: white;
  text-align: center;
  color: #666;
}
#interruptingMessageClose {
  position: absolute;
  top: 12px;
  right: 20px;
  color: #666;
  font-size: 24px;
  cursor: pointer;
}
#interruptingMessage h1 {
  font-style: italic;
  font-size: 28px;
  font-weight: normal;
  letter-spacing: 1px;
  text-align: center;
  margin: 0 0 30px;
  color: #333;
}
.testMessage {
  position: fixed;
  z-index: 5001;
  width: 450px;
  height: 180px;
  margin-top: -90px;
  margin-left: -225px;
  left: 50%;
  top: 50%;
  background-color: #F9F9F7;
  padding: 32px 20px;
  box-sizing: border-box;
  text-align: center;
}
.testMessage .title {
  font-size: 18px;
  line-height: 1.4;
}
.testMessage .button {
  margin-top: 20px;
}
.header .account img {
  height: 24px;
  width: 24px;
  opacity: 0.4;
  vertical-align: -3px;
}
.header .readerNavMenuSearchButton,
.header .readerNavMenuMenuButton {
  margin: 0 8px 0 6px;
  font-size: 17px;
  position: relative;
  top: -1px;
}
.header .headerNavContent {
  position: fixed;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  top: 0;
  padding-top: 54px;
  z-index: 1000;
}
.ui-autocomplete {
  position: absolute;
  background: white;
  list-style-type: none;
  padding: 6px 0;
  border: 1px solid #aaa;
  border-top: 1px solid #ddd;
  z-index: 1002 !important;
  font-family: "adobe-garamond-pro", Georgia, serif;
}
.ui-autocomplete .ui-menu-item a {
  padding: 4px 12px;
  font-size: 16px;
  color: black;
  cursor: pointer;
  display: block;
}
.ui-autocomplete .ui-menu-item a.ui-state-focus {
  background-color: #E9E9E7;
}
.ui-helper-hidden-accessible {
  display: none;
}
.multiPanel .readerPanelBox {
  box-sizing: border-box;
}
.readerPanelBox {
  position: absolute;
  height: 100%;
  width: 100%;
}
.readerPanelBox + .readerPanelBox {
  border-left: 1px solid #eee;
}
.readerPanelBox.sidebar {
  border-left: none;
}
.readerPanel {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: inherit;
  font-family: "adobe-garamond-pro", Georgia, serif;
}
.readerContent {
  width: 100%;
  height: 100%;
  background-color: inherit;
}
.dark .readerContent {
  color: white;
}
.textColumn {
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  position: relative;
  padding: 0px 0 40%;
  box-sizing: border-box;
  background-color: inherit;
}
/* Adjusting for 17px scrollbars, to keep content centered
   Only done in multiPanel mode now as a proxy for whether scrollbars take up width (on desktop they do, not on mobile) */
.multiPanel .english .textColumn, .multiPanel .bilingual .textColumn {
  padding-left: 17px;
}
.multiPanel .hebrew .textColumn {
  padding-right: 17px;
}
.textColumn .loadingMessage.base {
  margin: 30px 0;
  color: #999;
  text-align: center;
  font-weight: lighter;
  font-style: normal;
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif;
  text-transform: uppercase;
  letter-spacing: 1px;
  /*border-bottom: 4px solid #E6E5E6;*/
  padding: 0 6px 3px;
}
.textColumn .loadingMessage.base.prev {
  margin: 70px 0 30px;
}
.textColumn .loadingMessage.base.next {
  margin: 30px 0 70px;
}
.textColumn .loadingMessage.base.next.final {
}
.he {
  font-size: 120%;
}
.readerPanel .he {
  font-family: "Taamey Frank", "Times New Roman", serif;
  direction: rtl;
  text-align: right;
}
.readerPanel.hebrew {
  direction: rtl;
}
.readerPanel.english .he {
  display: none;
}
.readerPanel.english .en {
  display: inline;
}
.readerPanel.hebrew .he {
  display: inline;
  text-align: right;
}
.readerPanel.hebrew .he .enInHe {
  font-size: 83%;
}
.readerPanel.hebrew .en {
  display: none;
}
.readerPanel.english .heOnly .he,
.readerPanel.bilingual .heOnly .he {
  display: inline;
}
.languageToggle {
  display: inline;
  line-height: 32px;
}
.languageToggle img {
  opacity: 0.2;
  height: 18px;
}
.systemPanel.english .content .he {
  display: none;
}
/* ... */

